MyOrderClassAdded